SERVER-14306 Make sure mongos never requests more results than needed from the shards